--- a/revisao react/src/components/Body.css
+++ b/revisao react/src/components/Body.css
@@ -1,7 +1,8 @@
 .container-body{
+    background-color: #fff;
+    /* height: calc(100vh - 60px); */
+    min-height: calc(100vh - 60px);
     display: flex;
-    background-color: cadetblue;
-    color: white;
-    border-radius: 0px;
-    height: 100vh;
+    align-items: center;
+    flex-direction: column;
 }
