--- a/revisao react/src/components/Demo1.css
+++ b/revisao react/src/components/Demo1.css
@@ -1,3 +1,20 @@
 .container-demo1{
-    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.button-demo1{
+    background-color: #B967C7;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 10px;
+    height: 50px;
+}
+
+.button-demo1:hover {
+    background-color: #9b4fa5;
 }
