--- a/Jogo de Tabuleiro/src/App.css
+++ b/Jogo de Tabuleiro/src/App.css
@@ -41,3 +41,9 @@
   color: #888;
 }
 
+body {
+  background-image: url('path/to/your/image.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
