--- a/Jogo de Tabuleiro/src/index.css
+++ b/Jogo de Tabuleiro/src/index.css
@@ -57,13 +57,13 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #CED0BB
   }
   a:hover {
     color: #747bff;
   }
   button {
-    background-color: #3f3f3f;
+    background-color: #262626;
     color: #ffffff;
   }
 }
